[tool.poetry]
name = "encosy"
version = "0.9.6"
description = "ECS python implementation"
authors = ["baranynah <a.kovalenko.ai@yandex.ru>"]
readme = "README.md"

packages = [
    {include = "encosy", from = "."},
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
python = "^3.10"
jupyterlab = "^3.5.2"


[tool.poetry.group.test.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
coverage = "^6.5.0"
pytest = "^7.2.0"
black = "^22.10.0"
pytest-cov = "^4.0.0"
mkdocs = "^1.4.2"
gitchangelog = "^3.0.4"
mypy = "^0.991"
isort = "^5.10.1"
codecov = "^2.1.12"
mkdocs-material = "^8.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
