[tool.poetry]
name = "encosy"
version = "2.0.1"
description = "ECS python implementation"
authors = ["Cruxyu <a.kovalenko.ai@gmail.com>"]
readme = "README.md"
packages = [
    {include = "encosy", from = "."},
]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
python = "^3.10"
jupyterlab = "^3.5.2"


[tool.poetry.group.test.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
coverage = "^6.5.0"
pytest = "^7.2.0"
black = "^22.10.0"
pytest-cov = "^4.0.0"
mkdocs = "^1.4.2"
gitchangelog = "^3.0.4"
mypy = "^0.991"
isort = "^5.10.1"
codecov = "^2.1.12"
mkdocs-material = "^8.5.11"
pytest-timeout = "^2.1.0"


[tool.poetry.group.mem.dependencies]
python = "^3.10"
scalene = "^1.5.19"
matplotlib = "^3.6.2"
memray = "^1.5.0"


[tool.poetry.group.cpu.dependencies]
python = "^3.10"
scalene = "^1.5.19"
snakeviz = "^2.1.1"


[tool.poetry.group.app.dependencies]
python = "^3.10"
faker = "^15.3.4"


[tool.poetry.group.lint.dependencies]
python = "^3.10"
ruff = "^0.0.217"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Never try to fix `F401` (unused imports).
unfixable = ["F401"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
